skfuzzy/control/fcl/FclParser.py
# $ANTLR 3.1.3 Mar 18, 2009 10:09:25 Fcl.g 2016-09-21 22:32:47

import sys
from antlr3 import *
from antlr3.compat import set, frozenset

from antlr3.tree import *



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
FUNCTION=34
SIGM=61
STAR=91
LN=43
LETTER=96
LM=42
LOG=44
EINSTEIN=26
COG=17
NOT=52
EOF=-1
COA=15
HAT=81
SIN=62
EXP=32
MM=50
COS=20
TAN=65
LEFT_PARENTHESIS=83
COMMENT=99
GAUSS2=36
NC=51
END_RULEBLOCK=30
VAR_OUTPUT=72
ACT=10
END_DEFUZZIFY=27
RULE=59
NUMBER=93
GBELL=37
SEMICOLON=89
DMIN=24
VALUE_REAL=6
ALPHANUM=97
TYPE_REAL=70
ABS=8
REAL=98
WS=74
NSUM=53
LEFT_CURLY=82
OR=54
LOWER=94
END_FUZZIFY=29
UPPER=95
TERM=66
COGF=19
PROBOR=55
RIGHT_CURLY=87
NIPMIN=48
POINT=4
RM=58
MAX=45
DOTS=80
COGS=18
ID=102
AND=11
SUM=64
VALUE_ID=7
DSIGM=25
IF=40
SLASH=90
THEN=67
RIGHT_PARENTHESIS=88
COMMA=78
IS=41
DMAX=23
TRAPE=68
BDIF=13
PROD=56
COSINE=16
PLUS=86
DIGIT=92
DOT=79
FUNCTION_BLOCK=38
WITH=73
END_VAR=31
ACCU=9
ASUM=12
PERCENT=85
SINGLETONS=63
NIPMAX=49
ASSIGN_OPERATOR=76
TRIAN=69
DEFAULT=21
HAMACHER=33
COMMENT_C=100
FCL=5
RANGE=57
MIN=47
MINUS=84
DEFUZZIFY=22
COLON=77
NEWLINE=75
COMMENT_SL=101
VAR_INPUT=71
BSUM=14
RULEBLOCK=60
FUZZIFY=39
END_FUNCTION_BLOCK=28
METHOD=46
GAUSS=35

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>",
    "POINT", "FCL", "VALUE_REAL", "VALUE_ID", "ABS", "ACCU", "ACT", "AND",
    "ASUM", "BDIF", "BSUM", "COA", "COSINE", "COG", "COGS", "COGF", "COS",
    "DEFAULT", "DEFUZZIFY", "DMAX", "DMIN", "DSIGM", "EINSTEIN", "END_DEFUZZIFY",
    "END_FUNCTION_BLOCK", "END_FUZZIFY", "END_RULEBLOCK", "END_VAR", "EXP",
    "HAMACHER", "FUNCTION", "GAUSS", "GAUSS2", "GBELL", "FUNCTION_BLOCK",
    "FUZZIFY", "IF", "IS", "LM", "LN", "LOG", "MAX", "METHOD", "MIN", "NIPMIN",
    "NIPMAX", "MM", "NC", "NOT", "NSUM", "OR", "PROBOR", "PROD", "RANGE",
    "RM", "RULE", "RULEBLOCK", "SIGM", "SIN", "SINGLETONS", "SUM", "TAN",
    "TERM", "THEN", "TRAPE", "TRIAN", "TYPE_REAL", "VAR_INPUT", "VAR_OUTPUT",
    "WITH", "WS", "NEWLINE", "ASSIGN_OPERATOR", "COLON", "COMMA", "DOT",
    "DOTS", "HAT", "LEFT_CURLY", "LEFT_PARENTHESIS", "MINUS", "PERCENT",
    "PLUS", "RIGHT_CURLY", "RIGHT_PARENTHESIS", "SEMICOLON", "SLASH", "STAR",
    "DIGIT", "NUMBER", "LOWER", "UPPER", "LETTER", "ALPHANUM", "REAL", "COMMENT",
    "COMMENT_C", "COMMENT_SL", "ID"
]




class FclParser(Parser):
    grammarFileName = "Fcl.g"
    antlr_version = version_str_to_tuple("3.1.3 Mar 18, 2009 10:09:25")
    antlr_version_str = "3.1.3 Mar 18, 2009 10:09:25"
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        super(FclParser, self).__init__(input, state, *args, **kwargs)






        self._adaptor = None
        self.adaptor = CommonTreeAdaptor()




    def getTreeAdaptor(self):
        return self._adaptor

    def setTreeAdaptor(self, adaptor):
        self._adaptor = adaptor

    adaptor = property(getTreeAdaptor, setTreeAdaptor)


    class main_return(ParserRuleReturnScope):
        def __init__(self):
            super(FclParser.main_return, self).__init__()

            self.tree = None




    # $ANTLR start "main"
    # Fcl.g:145:1: main : f= fcl -> ^( FCL $f) ;
    def main(self, ):

        retval = self.main_return()
        retval.start = self.input.LT(1)

        root_0 = None

        f = None


        stream_fcl = RewriteRuleSubtreeStream(self._adaptor, "rule fcl")
        try:
            try:
                # Fcl.g:145:6: (f= fcl -> ^( FCL $f) )
                # Fcl.g:145:9: f= fcl
                pass
                self._state.following.append(self.FOLLOW_fcl_in_main2813)
                f = self.fcl()

                self._state.following.pop()
                stream_fcl.add(f.tree)

                # AST Rewrite
                # elements: f
                # token labels:
                # rule labels: f, retval
                # token list labels:
                # rule list labels:
                # wildcard labels:

                retval.tree = root_0

                if f is not None:
                    stream_f = RewriteRuleSubtreeStream(self._adaptor, "rule f", f.tree)
                else:
                    stream_f = RewriteRuleSubtreeStream(self._adaptor, "token f", None)


                if retval is not None:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                else:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                root_0 = self._adaptor.nil()
                # 145:15: -> ^( FCL $f)
                # Fcl.g:145:18: ^( FCL $f)
                root_1 = self._adaptor.nil()
                root_1 = self._adaptor.becomeRoot(self._adaptor.createFromType(FCL, "FCL"), root_1)

                self._adaptor.addChild(root_1, stream_f.nextTree())

                self._adaptor.addChild(root_0, root_1)



                retval.tree = root_0



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass
        return retval

    # $ANTLR end "main"

    class fcl_return(ParserRuleReturnScope):
        def __init__(self):
            super(FclParser.fcl_return, self).__init__()

            self.tree = None




    # $ANTLR start "fcl"
    # Fcl.g:146:1: fcl : ( function_block )+ ;
    def fcl(self, ):

        retval = self.fcl_return()
        retval.start = self.input.LT(1)

        root_0 = None

        function_block1 = None



        try:
            try:
                # Fcl.g:146:5: ( ( function_block )+ )
                # Fcl.g:146:9: ( function_block )+
                pass
                root_0 = self._adaptor.nil()

                # Fcl.g:146:9: ( function_block )+
                cnt1 = 0
                while True: #loop1
                    alt1 = 2
                    LA1_0 = self.input.LA(1)

                    if (LA1_0 == FUNCTION_BLOCK) :
                        alt1 = 1


                    if alt1 == 1:
                        # Fcl.g:146:10: function_block
                        pass
                        self._state.following.append(self.FOLLOW_function_block_in_fcl2832)
                        function_block1 = self.function_block()

                        self._state.following.pop()
                        self._adaptor.addChild(root_0, function_block1.tree)


                    else:
                        if cnt1 >= 1:
                            break #loop1

                        eee = EarlyExitException(1, self.input)
                        raise eee

                    cnt1 += 1



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass
        return retval

    # $ANTLR end "fcl"

    class function_block_return(ParserRuleReturnScope):
        def __init__(self):
            super(FclParser.function_block_return, self).__init__()

            self.tree = None




    # $ANTLR start "function_block"
    # Fcl.g:148:1: function_block : FUNCTION_BLOCK ( ID )? ( declaration )* END_FUNCTION_BLOCK ;
    def function_block(self, ):

        retval = self.function_block_return()
        retval.start = self.input.LT(1)

        root_0 = None

        FUNCTION_BLOCK2 = None
        ID3 = None
        END_FUNCTION_BLOCK5 = None
        declaration4 = None


        FUNCTION_BLOCK2_tree = None
        ID3_tree = None
        END_FUNCTION_BLOCK5_tree = None

        try:
            try:
                # Fcl.g:148:16: ( FUNCTION_BLOCK ( ID )? ( declaration )* END_FUNCTION_BLOCK )
                # Fcl.g:148:18: FUNCTION_BLOCK ( ID )? ( declaration )* END_FUNCTION_BLOCK
                pass
                root_0 = self._adaptor.nil()

                FUNCTION_BLOCK2=self.match(self.input, FUNCTION_BLOCK, self.FOLLOW_FUNCTION_BLOCK_in_function_block2842)

                FUNCTION_BLOCK2_tree = self._adaptor.createWithPayload(FUNCTION_BLOCK2)
                root_0 = self._adaptor.becomeRoot(FUNCTION_BLOCK2_tree, root_0)

                # Fcl.g:148:34: ( ID )?
                alt2 = 2
                LA2_0 = self.input.LA(1)

                if (LA2_0 == ID) :
                    alt2 = 1
                if alt2 == 1:
                    # Fcl.g:148:35: ID
                    pass
                    ID3=self.match(self.input, ID, self.FOLLOW_ID_in_function_block2846)

                    ID3_tree = self._adaptor.createWithPayload(ID3)
                    self._adaptor.addChild(root_0, ID3_tree)




                # Fcl.g:148:40: ( declaration )*
                while True: #loop3
                    alt3 = 2
                    LA3_0 = self.input.LA(1)

                    if (LA3_0 == DEFUZZIFY or LA3_0 == FUZZIFY or LA3_0 == RULEBLOCK or (VAR_INPUT <= LA3_0 <= VAR_OUTPUT)) :
                        alt3 = 1


                    if alt3 == 1:
                        # Fcl.g:148:41: declaration
                        pass
                        self._state.following.append(self.FOLLOW_declaration_in_function_block2851)
                        declaration4 = self.declaration()

                        self._state.following.pop()
                        self._adaptor.addChild(root_0, declaration4.tree)


                    else:
                        break #loop3
                END_FUNCTION_BLOCK5=self.match(self.input, END_FUNCTION_BLOCK, self.FOLLOW_END_FUNCTION_BLOCK_in_function_block2855)



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass
        return retval

    # $ANTLR end "function_block"

    class declaration_return(ParserRuleReturnScope):
        def __init__(self):
            super(FclParser.declaration_return, self).__init__()

            self.tree = None




    # $ANTLR start "declaration"
    # Fcl.g:149:1: declaration : ( var_input | var_output | fuzzify_block | defuzzify_block | rule_block );
    def declaration(self, ):

        retval = self.declaration_return()
        retval.start = self.input.LT(1)

        root_0 = None

        var_input6 = None

        var_output7 = None

        fuzzify_block8 = None

        defuzzify_block9 = None

        rule_block10 = None



        try:
            try:
                # Fcl.g:149:13: ( var_input | var_output | fuzzify_block | defuzzify_block | rule_block )
                alt4 = 5
                LA4 = self.input.LA(1)
                if LA4 == VAR_INPUT:
                    alt4 = 1
                elif LA4 == VAR_OUTPUT:
                    alt4 = 2
                elif LA4 == FUZZIFY:
                    alt4 = 3
                elif LA4 == DEFUZZIFY:
                    alt4 = 4
                elif LA4 == RULEBLOCK:
                    alt4 = 5
                else:
                    nvae = NoViableAltException("", 4, 0, self.input)

                    raise nvae

                if alt4 == 1:
                    # Fcl.g:149:15: var_input
                    pass
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_var_input_in_declaration2863)
                    var_input6 = self.var_input()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, var_input6.tree)


                elif alt4 == 2:
                    # Fcl.g:149:27: var_output
                    pass
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_var_output_in_declaration2867)
                    var_output7 = self.var_output()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, var_output7.tree)


                elif alt4 == 3:
                    # Fcl.g:149:40: fuzzify_block
                    pass
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_fuzzify_block_in_declaration2871)
                    fuzzify_block8 = self.fuzzify_block()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, fuzzify_block8.tree)


                elif alt4 == 4:
                    # Fcl.g:149:56: defuzzify_block
                    pass
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_defuzzify_block_in_declaration2875)
                    defuzzify_block9 = self.defuzzify_block()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, defuzzify_block9.tree)


                elif alt4 == 5:
                    # Fcl.g:149:74: rule_block
                    pass
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_rule_block_in_declaration2879)
                    rule_block10 = self.rule_block()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, rule_block10.tree)


                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass
        return retval

    # $ANTLR end "declaration"

    class var_input_return(ParserRuleReturnScope):
        def __init__(self):
            super(FclParser.var_input_return, self).__init__()

            self.tree = None




    # $ANTLR start "var_input"
    # Fcl.g:151:1: var_input : VAR_INPUT ( var_def )* END_VAR ;
    def var_input(self, ):

        retval = self.var_input_return()
        retval.start = self.input.LT(1)

        root_0 = None

        VAR_INPUT11 = None
        END_VAR13 = None
        var_def12 = None


        VAR_INPUT11_tree = None
        END_VAR13_tree = None

        try:
            try:
                # Fcl.g:151:11: ( VAR_INPUT ( var_def )* END_VAR )
                # Fcl.g:151:13: VAR_INPUT ( var_def )* END_VAR
                pass
                root_0 = self._adaptor.nil()

                VAR_INPUT11=self.match(self.input, VAR_INPUT, self.FOLLOW_VAR_INPUT_in_var_input2887)

                VAR_INPUT11_tree = self._adaptor.createWithPayload(VAR_INPUT11)
                root_0 = self._adaptor.becomeRoot(VAR_INPUT11_tree, root_0)

                # Fcl.g:151:24: ( var_def )*
                while True: #loop5
                    alt5 = 2
                    LA5_0 = self.input.LA(1)

                    if (LA5_0 == ID) :
                        alt5 = 1


                    if alt5 == 1:
                        # Fcl.g:151:25: var_def
                        pass
                        self._state.following.append(self.FOLLOW_var_def_in_var_input2891)
                        var_def12 = self.var_def()

                        self._state.following.pop()
                        self._adaptor.addChild(root_0, var_def12.tree)


                    else:
                        break #loop5
                END_VAR13=self.match(self.input, END_VAR, self.FOLLOW_END_VAR_in_var_input2895)



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass
        return retval

    # $ANTLR end "var_input"

    class var_output_return(ParserRuleReturnScope):
        def __init__(self):
            super(FclParser.var_output_return, self).__init__()

            self.tree = None




    # $ANTLR start "var_output"
    # Fcl.g:152:1: var_output : VAR_OUTPUT ( var_def )+ END_VAR ;
    def var_output(self, ):

        retval = self.var_output_return()
        retval.start = self.input.LT(1)

        root_0 = None

        VAR_OUTPUT14 = None
        END_VAR16 = None
        var_def15 = None


        VAR_OUTPUT14_tree = None
        END_VAR16_tree = None

        try:
            try:
                # Fcl.g:152:12: ( VAR_OUTPUT ( var_def )+ END_VAR )
                # Fcl.g:152:14: VAR_OUTPUT ( var_def )+ END_VAR
                pass
                root_0 = self._adaptor.nil()

                VAR_OUTPUT14=self.match(self.input, VAR_OUTPUT, self.FOLLOW_VAR_OUTPUT_in_var_output2903)

                VAR_OUTPUT14_tree = self._adaptor.createWithPayload(VAR_OUTPUT14)
                root_0 = self._adaptor.becomeRoot(VAR_OUTPUT14_tree, root_0)

                # Fcl.g:152:26: ( var_def )+
                cnt6 = 0
                while True: #loop6
                    alt6 = 2
                    LA6_0 = self.input.LA(1)

                    if (LA6_0 == ID) :
                        alt6 = 1


                    if alt6 == 1:
                        # Fcl.g:152:27: var_def
                        pass
                        self._state.following.append(self.FOLLOW_var_def_in_var_output2907)
                        var_def15 = self.var_def()

                        self._state.following.pop()
                        self._adaptor.addChild(root_0, var_def15.tree)


                    else:
                        if cnt6 >= 1:
                            break #loop6

                        eee = EarlyExitException(6, self.input)
                        raise eee

                    cnt6 += 1
                END_VAR16=self.match(self.input, END_VAR, self.FOLLOW_END_VAR_in_var_output2911)



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:

            pass
        return retval

    # $ANTLR end "var_output"

    class var_def_return(ParserRuleReturnScope):
        def __init__(self):
            super(FclParser.var_def_return, self).__init__()

            self.tree = None




    # $ANTLR start "var_def"
    # Fcl.g:153:1: var_def : ID COLON data_type SEMICOLON ( range )? ;
    def var_def(self, ):

        retval = self.var_def_return()
        retval.start = self.input.LT(1)

        root_0 = None

        ID17 = None
        COLON18 = None
        SEMICOLON20 = None
        data_type19 = None

        range21 = None


        ID17_tree = None
        COLON18_tree = None
        SEMICOLON20_tree = None

        try:
            try:
                # Fcl.g:153:9: ( ID COLON data_type SEMICOLON ( range )? )
                # Fcl.g:153:11: ID COLON data_type SEMICOLON ( range )?
                pass
                root_0 = self._adaptor.nil()

                ID17=self.match(self.input, ID, self.FOLLOW_ID_in_var_def2919)

                ID17_tree = self._adaptor.createWithPayload(ID17)
                root_0 = self._adaptor.becomeRoot(ID17_tree, root_0)

                COLON18=self.match(self.input, COLON, self.FOLLOW_COLON_in_var_def2922)
                self._state.following.append(self.FOLLOW_data_type_in_var_def2925)
                data_type19 = self.data_type()

                self._state.following.pop()
                self._adaptor.addChild(root_0, data_type19.tree)
                SEMICOLON20=self.match(self.input, SEMICOLON, self.FOLLOW_SEMICOLON_in_var_def2927)
                # Fcl.g:153:43: ( range )?
                alt7 = 2
                LA7_0 = self.input.LA(1)
